--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@limitlesspc/prettier-config": "^1.3.0",
     "@types/bun": "1.1.13",
     "drizzle-kit": "^0.28.1",
-    "eslint": "^9.15.0",
+    "eslint": "9.10.0",
     "typescript": "5.6.3"
   },
   "prettier": "@limitlesspc/prettier-config"
