--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "fast-glob": "3.3.3"
   },
   "devDependencies": {
-    "@limitlesspc/eslint-config": "^0.15.6",
-    "@limitlesspc/prettier-config": "^2.0.0",
     "@types/bun": "1.2.18",
+    "@limitlesspc/eslint-config": "^0.16.0",
+    "@limitlesspc/prettier-config": "^1.0.0",
     "eslint": "9.19.0",
     "typescript": "5.8.3"
-  }
+  },
+  "trustedDependencies": [
+    "unrs-resolver"
+  ]
 }
