--- a/package.json
+++ b/package.json
@@ -8,19 +8,16 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "better-sqlite3": "^12.2.0",
-    "discord.js": "14.21.0",
-    "drizzle-orm": "0.44.2",
+    "better-sqlite3": "12.5.0",
+    "discord.js": "14.25.1",
+    "drizzle-orm": "0.45.1",
     "fast-glob": "3.3.3"
   },
   "devDependencies": {
-    "@limitlesspc/eslint-config": "^0.18.4",
-    "@limitlesspc/prettier-config": "^1.2.1",
-    "@types/bun": "1.2.18",
+    "@limitlesspc/eslint-config": "0.18.4",
+    "@limitlesspc/prettier-config": "1.2.1",
+    "@types/bun": "1.3.4",
     "eslint": "9.39.2",
-    "typescript": "5.8.3"
-  },
-  "trustedDependencies": [
-    "unrs-resolver"
-  ]
+    "typescript": "5.9.3"
+  }
 }
